--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -56,7 +56,7 @@ ul.ce-menu > li.active ul {
 
 .ce-window-title {
 	position: relative;
-	background-color: #999999;
+	background-color: #CCCCCC;
 	margin-top: -30px;
 	height: 30px;
 	font-weight: bold;
@@ -64,6 +64,10 @@ ul.ce-menu > li.active ul {
 	line-height: 30px;
 	cursor: default;
 	user-select: none;
+}
+
+.ce-window-title.active {
+	background-color: #999999;	
 }
 
 .ce-window-close {
