--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -89,6 +89,7 @@ ul.ce-menu > li.active ul {
 	overflow: hidden;
 	height: 100%;
 	width: 100%;
+	box-sizing: border-box;
 }
 
 .ce-file, .ce-dir {
@@ -211,15 +212,35 @@ ul.ce-menu > li.active ul {
 }
 
 
+.ce-editor-window .ce-window-body {
+	padding-bottom: 30px;
+}
+
 .ce-editor {
 	box-sizing: border-box;
 	border: none;
-	margin: 0;
+	margin: 0 0 30px 0;
 	padding: 4px;
 	width: 100%;
 	height: 100%;
 	color: #000033;
 	tab-size: 4;
+	resize: none;
+}
+
+.ce-editor-status {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	padding-left: 10px;
+	background-color: #CCCCCC;
+	color: #000000;
+}
+.ce-editor-status:hover {
+	opacity: 1;
 }
 .ce-window-log .ce-window-body {
 	height: 200px;
