--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -224,6 +224,8 @@ ul.ce-menu > li.active ul {
 	padding: 4px;
 	width: 100%;
 	height: 100%;
+	font-size: 12px;
+	line-height: 18px;
 	color: #000033;
 	tab-size: 4;
 	resize: none;
