--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -220,6 +220,7 @@ ul.ce-menu > li.active ul {
 .ce-editor {
 	box-sizing: border-box;
 	border: none;
+	outline: 0;
 	margin: 0 0 30px 0;
 	padding: 4px;
 	width: 100%;
