--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -100,12 +100,17 @@ ul.ce-menu ul {
 	right: 0;
 	width: 30px;
 	height: 30px;
+	font-size: 16px;
 	line-height: 30px;
 	text-align: center;
 }
 
 .ce-window-close:hover {
-	background-color: #CCCCDD;
+	background-color: #999999;
+}
+
+.ce-window.active .ce-window-close:hover {
+	background-color: #666666;
 }
 
 .ce-window-body {
