--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -1,7 +1,10 @@
-html {
+html, body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	height: 100%;
+	margin: 0;
+	overflow: hidden;
+	position: relative;
 }
 
 ul {
@@ -11,6 +14,8 @@ ul {
 
 .ce-document {
 	height: 100%;
+	width: 100%;
+	display: inline-block;
 	margin: 0;
 	background-color: #333333;
 	
