--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -276,11 +276,14 @@ ul.ce-menu ul {
 }
 
 
-.ce-editor-window-text .ce-window-body {
+.ce-editor-window .ce-editor-text {
+    height: 100%;
+    box-sizing: border-box;
+    position: relative;
 	padding-bottom: 30px;
 }
 
-.ce-editor-window-text textarea {
+.ce-editor-text textarea {
 	box-sizing: border-box;
 	border: none;
 	outline: 0;
@@ -295,7 +298,7 @@ ul.ce-menu ul {
 	resize: none;
 }
 
-.ce-editor-window-text .ce-editor-status {
+.ce-editor-text .ce-editor-status {
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -362,7 +365,8 @@ ul.ce-menu ul {
 	box-sizing: border-box;
 }
 
-.ce-window-body .ace_editor {
+.ce-window-body > .ce-editor-ace,
+.ce-editor-ace .ace_editor {
 	height: 100%;
 }
 
